<resources>
    <string name="app_name">Greenstar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Greenstar Social Marketing</string>
    <string name="nav_header_subtitle">support.it@greenstar.org.pk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mec_wheel">mec_wheel</string>
    <string name="title_activity_mecwheel_spin">MECWheelSpin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_counseling_card_description">counseling_card_description</string>
    <string name="subtitle_monthly_injectables">Monthly Injectable</string>
    <string name="sub_subtitle_monthly_injectables">Combined Injectable\nContraceptives (CICs)</string>
    <string name="sub_subtitle_harmonal_implants">Hormonal Implants</string>
    <string name="sub_title_intrauterine_device">Intrauterine Device</string>
    <string name="sub_subtitle_intrauterine_device">Copper-bearing IUD</string>
    <string name="sub_title_lactational_amenorrhea_method">Lactational Amenorrhea Method</string>
    <string name="sub_subtitle_lactational_amenorrhea_method">LAM</string>
    <string name="sub_title_male_condoms">Male Condoms</string>
    <string name="title_emergency_pills">Emergency Pills</string>
    <string name="sub_title_emergency_pills">Levonorgestrel</string>
    <string name="title_novodol">Novodol</string>
    <string name="sub_title_novodol">Levonorgestrel + Ethinyl Estradiol + Furrous Fumarate</string>
    <string name="title_depotone">Depotone</string>
    <string name="sub_title_depotone">Medroxyprogesterone Acetate</string>
    <string name="title_novaject">Nova-Ject</string>
    <string name="sub_title_novaject">Norethiesterone Enanthate - Estradiol Valerate</string>
    <string name="title_femiject">Femi-Ject</string>
    <string name="sub_title_femiject">Norethiesterone Enanthate - Estradiol Valerate</string>
    <string name="title_protect5">Protect-5</string>
    <string name="sub_title_protect5">Cu 375: a small plastic rod wound with copper wire, two flexible plastic arms and nylon thread.</string>
    <string name="title_safeload">Safeload</string>
    <string name="sub_title_safeload">T Cu 380 A: T Shape Plastic frame 176 mg Cu wire on its vertical arm and Cu sleeve having 66.5mg Cu each on horizontal arm. Total surface area is 880 mm sq.</string>
    <string name="title_enofer">Enofer</string>
    <string name="sub_title_enofer">Iron Sucrose</string>
    <string name="title_vical_plus">Vical Plus</string>
    <string name="sub_title_vical_plus">Ossein Mineral Complex (OMC) + Vitamin D</string>
    <string name="title_vitaferol">Vitaferol</string>
    <string name="sub_title_vitaferol">Cholecalciferol (Vitamin D3)</string>
    <string name="title_misotal">Misotal</string>
    <string name="sub_title_misotal">Misoprostol</string>
    <string name="title_cdk">Clean Delivery Kit (CDK)</string>
    <string name="sub_title_cdk">A Gynae Kit containing different items need for delivery case.</string>
    <string name="subtitle_progestin_only_injectables">Progestin-only Injectables</string>
    <string name="sub_subtitle_progestin_only_injectables">DMPA or NET-EN</string>
    <string name="sub_subtitle_the_pill">Combined Oral Contraceptives</string>
    <string name="sub_title_the_pill">The Pill</string>
    <string name="sub_title_intrauterine_device_system">Intrauterine Device/System</string>
    <string name="sub_subtitle_intrauterine_device_system">Levonorgestrel LNG IUD/IUS</string>
    <string name="subtitle_emergency_contraceptive_pills">Emergency Contraceptive Pills</string>
    <string name="sub_subtitle_emergency_contraceptive_pills">ECPs</string>
    <string name="sub_title_standard_days_method">Standard Days Method</string>
    <string name="sub_subtitle_standard_days_method">SDM</string>
    <string name="sub_title_withdrawal">Withdrawal</string>
    <string name="sub_subtitle_withdrawal">Coitus Interruptus/ “Pulling Out”</string>
    <string name="sub_title_healthy_timing_and_spacing_of_pregnancy">Healthy Timing and Spacing of Pregnancy</string>
    <string name="sub_title_promoting_a_healthy_postpartum_period">Promoting a Healthy Postpartum Period for the Mother</string>
    <string name="sub_title_post_abortion_care">Post Abortion Care</string>
    <string name="sub_subtitle_post_abortion_care">PAC</string>
    <string name="sub_title_sti_hiv_transmission_and_prevention">STI/HIV Transmission And Prevention</string>
    <string name="sub_title_sti_and_hiv_risk_assissment">STI and HIV Risk Assessment</string>
    <string name="sub_title_dual_protection">Dual Protection</string>
    <string name="sub_title_hiv_counseling_and_testing">HIV Counseling and Testing</string>
    <string name="sub_subtitle_hiv_counseling_and_testing">HCT</string>
    <string name="sub_title_screening_for_cervical_cancer">Screening for Cervical Cancer</string>
    <string name="sub_title_adolescent_counseling">Adolescent Counseling</string>
    <string name="effectiveness">Effectiveness</string>
    <string name="typical_use">Typical Usage</string>
    <string name="correct_use">Correct Use</string>
    <string name="first_year_use">First year of use</string>
    <string name="types">Types</string>
    <string name="typical_use_in_first_year">Typical use in first year</string>
    <string name="bold_text_healthy_timing_and_spacing_of_pregnancy">Advise on healthy timing and spacing of pregnancy.</string>
    <string name="bold_text_sti_hiv_transmission_and_prevention">
        Discuss the following about all sexually transmitted infections (STIs), including HIV:
    </string>
    <string name="bold_text_sti_and_hiv_risk_assissment">
        Discuss the following issues to assess the client’s risk of STIs and HIV:
    </string>
    <string name="bold_text_screening_for_cervical_cancer">
        If the client is 30-49 years of age or HIV positive at any age, ask if the client has ever been screened for cancer of the cervix.
    </string>
    <string name="bold_text_adolescent_counseling">
        If a client is younger than 18 years, discuss adolescent health needs.
    </string>
    <string name="types_emergency_contraceptive_pills">
        <li> Progestin only</li>\n
        <li> Combined progestin and estrogen</li>\n
        <li> Ulipristal acetate (UPA)</li>
    </string>
    <string name="types_harmonal_implants">
        <li>  Single rod (Implanon, Nexplanon/Implanon NXT) </li>\n
        <li>  Double rod (Jadelle, Sino-plant II)</li>\n
    </string>
    <string name="types_progestin_only_injectables">
        <li>   Intramuscular DMPA 150mg or NET-EN </li>\n
        <li>   Subcutaneous DMPA 104mg (Sayana Press)</li>\n
    </string>
    <string name="typical_usage_description_monthly_injectables">Some missed or late injections – 6 pregnancies per 100 women</string>
    <string name="typical_usage_description_emergency_contraceptive_pills">Most effective if taken within first 24 hours; can be taken within 5 days of having unprotected sex – 1-2 pregnancies per 100 women after one instance of unprotected sex depending on the ECP</string>
    <string name="typical_usage_description_harmonal_implants">Less than 1 pregnancy per 100 women</string>
    <string name="typical_usage_description_intrauterine_device">Less than 1 pregnancy per 100 women</string>
    <string name="typical_usage_description_intrauterine_device_system">Less than 1 pregnancy per 100 women</string>
    <string name="typical_usage_description_lactational_amenorrhea_method">First 6 months after childbirth when all 3 criteria are met — 2 pregnancies per 100 women</string>
    <string name="novodolStrength"><b>Strength:</b></string>
    <string name="novodolStrength1">21 White Tab 0.15mg Levonorgestrel + 0.03mg Ethinyl Estradiol</string>
    <string name="novodolStrength2">7 Brown Tab 75mg Ferrous Fumerate</string>
    <string name="novodolPack"><b>Pack:</b> 3 strips of 28 Tablets, 21 White tablets and 7 Brown tablets</string>
    <string name="novodolIndication"><b>Indication:</b> Also called COC (combined oral contraceptive) is a combination of two hormone, taken orally once daily to prevent pregnancy. </string>
    <string name="novodolDosage"><b>Dosage:</b>Take 1st white tab opposite the pointing arrow of the 1st pack on the 1st day of onset of Menstrual period, follow the arrow direction and everyday take one white tab (until all 21 tab finished and then take one brown tab daily for 7 days.</string>
    <string name="novodolAdministration"><b>Administration:</b> Orally take each tab at the same time each day, preferably after evening meal.</string>
    <string name="novodolPrecaution"><b>Precaution:</b></string>
    <string name="novodolPrecaution1">Do not skip any day between tablets. </string>
    <string name="novodolPrecaution2">If skip any white tab, take it as soon as you remember and take the next tab at the usual time.</string>
    <string name="novodolPrecaution3">If forgot to take 3 or more white tablet, do not take them when you remember. Discard the rest of the pack and start a fresh pack.</string>
    <string name="novodolContraindication"><b>Contraindication:</b> Do not give it to other who may want birth control pills.</string>
    <string name="novodolContraindication1">Take only under advice of the consultant physician</string>
    <string name="novodolPrice"><b>Price:</b></string>
    <string name="novodolPrice1">TP 53.13 Rs</string>
    <string name="novodolPrice2">MRP 62.5 Rs</string>
    <string name="misotalStrength"><b>Strength:</b>200mcg Tablet.</string>
    <string name="misotalPack"><b>Pack:</b>10 Tablets/ pack.</string>
    <string name="misotalIndication"><b>Indication:</b></string>
    <string name="misotalIndication1">For immediate post abortion care</string>
    <string name="misotalIndication2">To reduce unsafe abortions by giving women appropriate information on medical abortion</string>
    <string name="misotalIndication3">Safe and effective choice in PPH prophylaxis and treatment</string>
    <string name="misotalIndication4">Treatment of Missed, Incomplete abortion, Interruption of pregnancy and miscarriage</string>
    <string name="misotalDosage"><b>Dosage:</b></string>
    <string name="misotalDosage1">Cervical Ripening (Pre-instrumentation): 400mcg vaginal 3 hrs before procedure</string>
    <string name="misotalDosage2">Missed Abortion: 800 mcg vaginal 3 hrly (max x2) OR 600 mcs sub lingual (max x2)</string>
    <string name="misotalDosage3">Incomplete Abortion: 600 mcg oral single dose</string>
    <string name="misotalDosage4">Interruption of pregnancy: 400 mcg vaginal 3 hrly (max x5)</string>
    <string name="misotalDosage5">Interuterine foetal Death: 13-17 wks: 200 mcg vaginal 6 hrly (max x4); 18-26 wks: 100 mcg vagi nal 6 hrly (max x4); 27-43 wks mcg vaginal 6 hrly</string>
    <string name="misotalDosage6">Induction of labor: 25 mcg vaginal 6 hrly OR 25 mcg oral 2 hrly</string>
    <string name="misotalDosage7">Postpartum: PPH prophylaxis 600mcg oral single dose; PPH treatment 800 mcg sublingual single dose</string>
    <string name="misotalAdministration"><b>Administration:</b>Oral / Vaginal / Sublingual route depending upon the condition</string>
    <string name="misotalPrecaution"><b>Precaution:</b>Take only under Medical advice and prescription</string>
    <string name="misotalContraindication"><b>Contraindication:</b>Avoid as an OTC, Only used in recommended indication and under Medical Advice</string>
    <string name="misotalPrice"><b>Price:</b></string>
    <string name="misotalPrice1">TP 85 Rs</string>
    <string name="misotalPrice2">MRP 100 Rs</string>
</resources>