<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mustard"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CounselingCardDescription"
    tools:showIn="@layout/activity_counseling_card_description"
    android:theme="@style/Animation.AppCompat.Dialog">
    <!-- Complete misotal-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/menu_item_margin"
        android:orientation="vertical">

        <!-- Top Heading misotal-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box"
            android:gravity="center"
            android:padding="@dimen/menu_item_padding"
            android:orientation="vertical">
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/description_text_color"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/title_misotal"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/description_text_color"
                android:text="@string/sub_title_misotal"/>
        </LinearLayout>

        <!-- misotal Product Image -->
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/box"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/menu_item_margin"
            android:padding="@dimen/menu_item_padding"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/misotal"/>

        </LinearLayout>

        <!-- Description misotal-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box"
            android:padding="@dimen/menu_item_padding"
            android:layout_marginTop="@dimen/menu_item_margin"
            android:orientation="vertical">
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalStrength"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalPack"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalIndication"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalIndication1"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalIndication2"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalIndication3"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalIndication4"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalDosage"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:drawableLeft="@drawable/bullet_icon"
                android:gravity="center_vertical"
                android:text="@string/misotalDosage1"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:drawableLeft="@drawable/bullet_icon"
                android:gravity="center_vertical"
                android:text="@string/misotalDosage2"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:drawableLeft="@drawable/bullet_icon"
                android:gravity="center_vertical"
                android:text="@string/misotalDosage3"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:drawableLeft="@drawable/bullet_icon"
                android:gravity="center_vertical"
                android:text="@string/misotalDosage4"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:drawableLeft="@drawable/bullet_icon"
                android:gravity="center_vertical"
                android:text="@string/misotalDosage5"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:drawableLeft="@drawable/bullet_icon"
                android:gravity="center_vertical"
                android:text="@string/misotalDosage6"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:drawableLeft="@drawable/bullet_icon"
                android:gravity="center_vertical"
                android:text="@string/misotalDosage7"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalAdministration"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalPrecaution"/>

            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalContraindication"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:text="@string/misotalPrice"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:drawableLeft="@drawable/bullet_icon"
                android:gravity="center_vertical"
                android:text="@string/misotalPrice1"/>
            <TextView style="@style/small_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/description_gap"
                android:textColor="@color/description_text_color"
                android:drawableLeft="@drawable/bullet_icon"
                android:gravity="center_vertical"
                android:text="@string/misotalPrice2"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>