<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/mustard"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".CounselingCardDescription"
tools:showIn="@layout/activity_counseling_card_description"
android:theme="@style/Animation.AppCompat.Dialog">
<!-- Complete Novodol-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/menu_item_margin"
    android:orientation="vertical">

    <!-- Top Heading Emergency Pills-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:gravity="center"
        android:padding="@dimen/menu_item_padding"
        android:orientation="vertical">
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/description_text_color"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/title_novodol"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/description_text_color"
            android:text="@string/sub_title_novodol"/>
    </LinearLayout>

    <!-- novodol Product Image -->
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/box"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/menu_item_margin"
        android:padding="@dimen/menu_item_padding"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/novodol"/>

    </LinearLayout>

    <!-- Description novodol-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box"
        android:padding="@dimen/menu_item_padding"
        android:layout_marginTop="@dimen/menu_item_margin"
        android:orientation="vertical">
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:text="@string/novodolStrength"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:drawableLeft="@drawable/bullet_icon"
            android:gravity="center_vertical"
            android:text="@string/novodolStrength1"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:drawableLeft="@drawable/bullet_icon"
            android:gravity="center_vertical"
            android:text="@string/novodolStrength2"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:text="@string/novodolPack"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:text="@string/novodolIndication"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:text="@string/novodolDosage"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:text="@string/novodolAdministration"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:text="@string/novodolPrecaution"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:drawableLeft="@drawable/bullet_icon"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/novodolPrecaution1"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:drawableLeft="@drawable/bullet_icon"
            android:gravity="center_vertical"
            android:text="@string/novodolPrecaution2"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:drawableLeft="@drawable/bullet_icon"
            android:gravity="center_vertical"
            android:text="@string/novodolPrecaution3"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:text="@string/novodolContraindication"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:drawableLeft="@drawable/bullet_icon"
            android:gravity="center_vertical"
            android:text="@string/novodolContraindication1"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:text="@string/novodolPrice"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:drawableLeft="@drawable/bullet_icon"
            android:gravity="center_vertical"
            android:text="@string/novodolPrice1"/>
        <TextView style="@style/small_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_gap"
            android:textColor="@color/description_text_color"
            android:drawableLeft="@drawable/bullet_icon"
            android:gravity="center_vertical"
            android:text="@string/novodolPrice2"/>
    </LinearLayout>
</LinearLayout>

</ScrollView>